Update environment configuration, enhance README, and refactor backend services. Changed default DB credentials in `.env.example`, added new API endpoints for form automation, and improved error handling in various services. Removed deprecated scripts and updated documentation for unified service setup.